--- a/notebooks/Code.ipynb
+++ b/notebooks/Code.ipynb
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "[3981 rows x 6 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,6 +639,277 @@
     "tbl_merchants_pd = tbl_merchants.toPandas()\n",
     "merchant = pd.merge(grouped_file_pd, tbl_merchants_pd)\n",
     "merchant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/63/097df8mn6r1d0btnhwhjpkr40000gn/T/ipykernel_45019/4037149065.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  merchant['tags'].iloc[i] = merchant['tags'].iloc[i].replace(r'[', r'(').replace(r']', r')')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>merchant_abn</th>\n",
+       "      <th>avg</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>count</th>\n",
+       "      <th>name</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10023283211</td>\n",
+       "      <td>208.750594</td>\n",
+       "      <td>172219.240413</td>\n",
+       "      <td>825</td>\n",
+       "      <td>Felis Limited</td>\n",
+       "      <td>((furniture, home furnishings and equipment sh...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10142254217</td>\n",
+       "      <td>40.039770</td>\n",
+       "      <td>30870.662772</td>\n",
+       "      <td>771</td>\n",
+       "      <td>Arcu Ac Orci Corporation</td>\n",
+       "      <td>((cable, satellite, and otHer pay television a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10187291046</td>\n",
+       "      <td>110.326191</td>\n",
+       "      <td>9708.704810</td>\n",
+       "      <td>88</td>\n",
+       "      <td>Ultricies Dignissim Lacus Foundation</td>\n",
+       "      <td>((wAtch, clock, and jewelry repair shops), (b)...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10192359162</td>\n",
+       "      <td>451.143208</td>\n",
+       "      <td>48272.323259</td>\n",
+       "      <td>107</td>\n",
+       "      <td>Enim Condimentum PC</td>\n",
+       "      <td>((music shops - musical instruments, pianos, a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10206519221</td>\n",
+       "      <td>38.234392</td>\n",
+       "      <td>92986.040503</td>\n",
+       "      <td>2432</td>\n",
+       "      <td>Fusce Company</td>\n",
+       "      <td>((gift, card, novelty, and souvenir shops), (a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3976</th>\n",
+       "      <td>99938978285</td>\n",
+       "      <td>30.029723</td>\n",
+       "      <td>132971.614185</td>\n",
+       "      <td>4428</td>\n",
+       "      <td>Elit Dictum Eu Ltd</td>\n",
+       "      <td>((opticians, optical goods, and eyeglasses), (...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3977</th>\n",
+       "      <td>99974311662</td>\n",
+       "      <td>319.209608</td>\n",
+       "      <td>10533.917066</td>\n",
+       "      <td>33</td>\n",
+       "      <td>Mollis LLP</td>\n",
+       "      <td>((books, periodicals, and newspapers), (b), (t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3978</th>\n",
+       "      <td>99976658299</td>\n",
+       "      <td>150.166184</td>\n",
+       "      <td>907904.749365</td>\n",
+       "      <td>6046</td>\n",
+       "      <td>Sociosqu Corp.</td>\n",
+       "      <td>((shoe  shops), (a), (take rate: 6.57))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3979</th>\n",
+       "      <td>99987905597</td>\n",
+       "      <td>353.519570</td>\n",
+       "      <td>15908.380664</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Commodo Hendrerit LLC</td>\n",
+       "      <td>((motor vehicle Supplies and new parts), (a), ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3980</th>\n",
+       "      <td>99990536339</td>\n",
+       "      <td>1799.601053</td>\n",
+       "      <td>17996.010526</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Massa PC</td>\n",
+       "      <td>((motor vehicle supplies and new parts), (e), ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3981 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      merchant_abn          avg            sum  count  \\\n",
+       "0      10023283211   208.750594  172219.240413    825   \n",
+       "1      10142254217    40.039770   30870.662772    771   \n",
+       "2      10187291046   110.326191    9708.704810     88   \n",
+       "3      10192359162   451.143208   48272.323259    107   \n",
+       "4      10206519221    38.234392   92986.040503   2432   \n",
+       "...            ...          ...            ...    ...   \n",
+       "3976   99938978285    30.029723  132971.614185   4428   \n",
+       "3977   99974311662   319.209608   10533.917066     33   \n",
+       "3978   99976658299   150.166184  907904.749365   6046   \n",
+       "3979   99987905597   353.519570   15908.380664     45   \n",
+       "3980   99990536339  1799.601053   17996.010526     10   \n",
+       "\n",
+       "                                      name  \\\n",
+       "0                            Felis Limited   \n",
+       "1                 Arcu Ac Orci Corporation   \n",
+       "2     Ultricies Dignissim Lacus Foundation   \n",
+       "3                      Enim Condimentum PC   \n",
+       "4                            Fusce Company   \n",
+       "...                                    ...   \n",
+       "3976                    Elit Dictum Eu Ltd   \n",
+       "3977                            Mollis LLP   \n",
+       "3978                        Sociosqu Corp.   \n",
+       "3979                 Commodo Hendrerit LLC   \n",
+       "3980                              Massa PC   \n",
+       "\n",
+       "                                                   tags  \n",
+       "0     ((furniture, home furnishings and equipment sh...  \n",
+       "1     ((cable, satellite, and otHer pay television a...  \n",
+       "2     ((wAtch, clock, and jewelry repair shops), (b)...  \n",
+       "3     ((music shops - musical instruments, pianos, a...  \n",
+       "4     ((gift, card, novelty, and souvenir shops), (a...  \n",
+       "...                                                 ...  \n",
+       "3976  ((opticians, optical goods, and eyeglasses), (...  \n",
+       "3977  ((books, periodicals, and newspapers), (b), (t...  \n",
+       "3978            ((shoe  shops), (a), (take rate: 6.57))  \n",
+       "3979  ((motor vehicle Supplies and new parts), (a), ...  \n",
+       "3980  ((motor vehicle supplies and new parts), (e), ...  \n",
+       "\n",
+       "[3981 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(int(merchant['tags'].count())):\n",
+    "    merchant['tags'].iloc[i] = merchant['tags'].iloc[i].replace(r'[', r'(').replace(r']', r')')\n",
+    "\n",
+    "#type(merchant['tags'].iloc[2])\n",
+    "merchant\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                      0     1  \\\n",
+      "0     ((furniture, home furnishings and equipment sh...  , (e   \n",
+      "1     ((cable, satellite, and otHer pay television a...  , (b   \n",
+      "2              ((wAtch, clock, and jewelry repair shops  , (b   \n",
+      "3     ((music shops - musical instruments, pianos, a...  , (a   \n",
+      "4             ((gift, card, novelty, and souvenir shops  , (a   \n",
+      "...                                                 ...   ...   \n",
+      "3976         ((opticians, optical goods, and eyeglasses  , (b   \n",
+      "3977               ((books, periodicals, and newspapers  , (b   \n",
+      "3978                                      ((shoe  shops  , (a   \n",
+      "3979             ((motor vehicle Supplies and new parts  , (a   \n",
+      "3980             ((motor vehicle supplies and new parts  , (e   \n",
+      "\n",
+      "                       2 3  4   \n",
+      "0     , (take rate: 0.18        \n",
+      "1     , (take rate: 4.22        \n",
+      "2     , (take rate: 3.29        \n",
+      "3     , (take rate: 6.33        \n",
+      "4     , (take rate: 6.34        \n",
+      "...                  ... .. ..  \n",
+      "3976  , (take rate: 4.50        \n",
+      "3977  , (take rate: 3.17        \n",
+      "3978  , (take rate: 6.57        \n",
+      "3979  , (take rate: 6.82        \n",
+      "3980  , (take rate: 0.18        \n",
+      "\n",
+      "[3981 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#merchant['tags'].str.split(pat, n=-1, expand=False)\n",
+    "# to split into multiple columns by delimiter\n",
+    "merchant['tags'].str.split(')', expand=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'((tent and awning shops), (b), (take rate: 4.90))'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merchant.iloc[2929,5]"
    ]
   },
   {
