--- a/notebooks/Read_external_data.ipynb
+++ b/notebooks/Read_external_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "62f8ed27",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "ce0340c5",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "e098cb87",
    "metadata": {},
    "outputs": [],
@@ -63,18 +63,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5da580d7",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/09/05 13:13:46 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.188.75 instead (on interface en0)\n",
+      "22/09/05 13:13:46 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/09/05 13:13:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/09/05 13:13:47 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import functions as F\n",
+    "# Create a spark session (which will run spark jobs)\n",
+    "spark = (\n",
+    "    SparkSession.builder.appName(\"MAST30034 Tutorial 1\")\n",
+    "    .config(\"spark.sql.repl.eagerEval.enabled\", True) \n",
+    "    .config(\"spark.sql.parquet.cacheMetadata\", \"true\")\n",
+    "    .config(\"spark.sql.session.timeZone\", \"Etc/UTC\")\n",
+    "    .getOrCreate()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "dc2ef49a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2472 2472\n"
+     ]
+    }
+   ],
+   "source": [
+    "G04= spark.read.option(\"header\",True).csv('../data/outer/census/2021 Census GCP Statistical Area 2 for AUS/2021Census_G17A_AUST_SA2.csv') #read the parquet \n",
+    "G = G04.na.drop(subset=G04.columns)\n",
+    "print(G04.count(),G.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0973831e",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ads",
+   "display_name": "Python 3.8.13 ('ads')",
    "language": "python",
-   "name": "ads"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -87,6 +153,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "6e45bdfcba1031802b2f7a315f02d536e51553942a60e4ee4be74aec82814bfa"
+   }
   }
  },
  "nbformat": 4,
