--- a/notebooks/census.ipynb
+++ b/notebooks/census.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "3fc66457",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "77db1100",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "     'texts': {'en': 'Codes for unit of multiplier are the exponent in base 10 so that multiplying the observation by 10^UNIT_MULT gives a value expressed in the unit of measure.'}}]}}}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,26 +314,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "07881482",
+   "execution_count": 23,
+   "id": "24f2b466",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import functions as F\n",
+    "# Create a spark session (which will run spark jobs)\n",
+    "spark = (\n",
+    "    SparkSession.builder.appName(\"MAST30034 Tutorial 1\")\n",
+    "    .config(\"spark.sql.repl.eagerEval.enabled\", True) \n",
+    "    .config(\"spark.sql.parquet.cacheMetadata\", \"true\")\n",
+    "    .config(\"spark.sql.session.timeZone\", \"Etc/UTC\")\n",
+    "    .getOrCreate()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "267939e4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'dataSets'",
+     "ename": "ValueError",
+     "evalue": "Cannot run multiple SparkContexts at once; existing SparkContext(app=My App, master=local) created by __init__ at /var/folders/4w/p31d1t_x5pqbppcsm7p9kxt00000gn/T/ipykernel_64126/2378517578.py:3 ",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/hexiangyi/Desktop/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/census.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/hexiangyi/Desktop/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/census.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m test \u001b[39m=\u001b[39m parse_json[\u001b[39m\"\u001b[39;49m\u001b[39mdataSets\u001b[39;49m\u001b[39m\"\u001b[39;49m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hexiangyi/Desktop/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/census.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(test)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hexiangyi/Desktop/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/census.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m df\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'dataSets'"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/hexiangyi/Desktop/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/census.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hexiangyi/Desktop/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/census.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyspark\u001b[39;00m \u001b[39mimport\u001b[39;00m SparkConf, SparkContext\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/hexiangyi/Desktop/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/census.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m conf \u001b[39m=\u001b[39m SparkConf()\u001b[39m.\u001b[39msetMaster(\u001b[39m'\u001b[39m\u001b[39mlocal\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39msetAppName(\u001b[39m'\u001b[39m\u001b[39mMy App\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/hexiangyi/Desktop/generic-buy-now-pay-later-project-group-16-project2-fighting-group/notebooks/census.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m sc \u001b[39m=\u001b[39m SparkContext(conf \u001b[39m=\u001b[39;49m conf)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/ads/lib/python3.8/site-packages/pyspark/context.py:195\u001b[0m, in \u001b[0;36mSparkContext.__init__\u001b[0;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls, udf_profiler_cls)\u001b[0m\n\u001b[1;32m    189\u001b[0m \u001b[39mif\u001b[39;00m gateway \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m gateway\u001b[39m.\u001b[39mgateway_parameters\u001b[39m.\u001b[39mauth_token \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    190\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    191\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mYou are trying to pass an insecure Py4j gateway to Spark. This\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    192\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m is not allowed as it is a security risk.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    193\u001b[0m     )\n\u001b[0;32m--> 195\u001b[0m SparkContext\u001b[39m.\u001b[39;49m_ensure_initialized(\u001b[39mself\u001b[39;49m, gateway\u001b[39m=\u001b[39;49mgateway, conf\u001b[39m=\u001b[39;49mconf)\n\u001b[1;32m    196\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    197\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_do_init(\n\u001b[1;32m    198\u001b[0m         master,\n\u001b[1;32m    199\u001b[0m         appName,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    208\u001b[0m         udf_profiler_cls,\n\u001b[1;32m    209\u001b[0m     )\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/ads/lib/python3.8/site-packages/pyspark/context.py:430\u001b[0m, in \u001b[0;36mSparkContext._ensure_initialized\u001b[0;34m(cls, instance, gateway, conf)\u001b[0m\n\u001b[1;32m    427\u001b[0m     callsite \u001b[39m=\u001b[39m SparkContext\u001b[39m.\u001b[39m_active_spark_context\u001b[39m.\u001b[39m_callsite\n\u001b[1;32m    429\u001b[0m     \u001b[39m# Raise error if there is already a running Spark context\u001b[39;00m\n\u001b[0;32m--> 430\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    431\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mCannot run multiple SparkContexts at once; \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    432\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mexisting SparkContext(app=\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m, master=\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    433\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m created by \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m at \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    434\u001b[0m         \u001b[39m%\u001b[39m (\n\u001b[1;32m    435\u001b[0m             currentAppName,\n\u001b[1;32m    436\u001b[0m             currentMaster,\n\u001b[1;32m    437\u001b[0m             callsite\u001b[39m.\u001b[39mfunction,\n\u001b[1;32m    438\u001b[0m             callsite\u001b[39m.\u001b[39mfile,\n\u001b[1;32m    439\u001b[0m             callsite\u001b[39m.\u001b[39mlinenum,\n\u001b[1;32m    440\u001b[0m         )\n\u001b[1;32m    441\u001b[0m     )\n\u001b[1;32m    442\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    443\u001b[0m     SparkContext\u001b[39m.\u001b[39m_active_spark_context \u001b[39m=\u001b[39m instance\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot run multiple SparkContexts at once; existing SparkContext(app=My App, master=local) created by __init__ at /var/folders/4w/p31d1t_x5pqbppcsm7p9kxt00000gn/T/ipykernel_64126/2378517578.py:3 "
      ]
     }
    ],
    "source": [
-    "test = parse_json[\"dataSets\"]\n",
-    "df = pd.DataFrame(test)\n",
-    "df"
+    "from pyspark import SparkConf, SparkContext\n",
+    "conf = SparkConf().setMaster('local').setAppName('My App')\n",
+    "sc = SparkContext(conf = conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dfc67718",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ParallelCollectionRDD[1] at readRDDFromFile at PythonRDD.scala:274"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jsonRDD = sc.parallelize(parse_json)\n",
+    "jsonRDD\n",
+    "df = spark.read.json(jsonRDD)\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "07881482",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['action', 'links', 'annotations', 'series'])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "#parse_json\n",
+    "#type(parse_json)\n",
+    "parse_json['data']['dataSets'][0].keys()"
    ]
   },
   {
