changed the downloaded format from csv to parquet because it was too big

--- a/notebooks/Read_external_data.ipynb
+++ b/notebooks/Read_external_data.ipynb
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "405d8b35",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
     "    shapes_list.append(shape)\n",
     "\n",
     "sa2_2021_temp[\"geometry\"] = shapes_list\n",
-    "sa2_2021_temp.to_csv(\"../data/outer/2021sa2_shapefile/SA2_2021_AUST_GDA2020.csv\",index_label=\"FID\")"
+    "sa2_2021_temp.to_parquet(\"../data/outer/2021sa2_shapefile/SA2_2021_AUST_GDA2020.parquet\")"
    ]
   },
   {
