--- a/notebooks/W1 Code.ipynb
+++ b/notebooks/W1 Code.ipynb
@@ -1772,13 +1772,41 @@
      "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/09/12 17:41:51 WARN HeartbeatReceiver: Removing executor driver with no recent heartbeats: 947443 ms exceeds timeout 120000 ms\n",
+      "22/09/12 17:41:52 WARN SparkContext: Killing executors is not supported by current scheduler.\n",
+      "22/09/12 20:48:43 WARN TransportChannelHandler: Exception in connection from /10.12.231.16:56224\n",
+      "java.io.IOException: Operation timed out\n",
+      "\tat java.base/sun.nio.ch.SocketDispatcher.read0(Native Method)\n",
+      "\tat java.base/sun.nio.ch.SocketDispatcher.read(SocketDispatcher.java:47)\n",
+      "\tat java.base/sun.nio.ch.IOUtil.readIntoNativeBuffer(IOUtil.java:340)\n",
+      "\tat java.base/sun.nio.ch.IOUtil.read(IOUtil.java:294)\n",
+      "\tat java.base/sun.nio.ch.IOUtil.read(IOUtil.java:269)\n",
+      "\tat java.base/sun.nio.ch.SocketChannelImpl.read(SocketChannelImpl.java:417)\n",
+      "\tat io.netty.buffer.PooledByteBuf.setBytes(PooledByteBuf.java:258)\n",
+      "\tat io.netty.buffer.AbstractByteBuf.writeBytes(AbstractByteBuf.java:1132)\n",
+      "\tat io.netty.channel.socket.nio.NioSocketChannel.doReadBytes(NioSocketChannel.java:350)\n",
+      "\tat io.netty.channel.nio.AbstractNioByteChannel$NioByteUnsafe.read(AbstractNioByteChannel.java:151)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.processSelectedKey(NioEventLoop.java:722)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.processSelectedKeysOptimized(NioEventLoop.java:658)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.processSelectedKeys(NioEventLoop.java:584)\n",
+      "\tat io.netty.channel.nio.NioEventLoop.run(NioEventLoop.java:496)\n",
+      "\tat io.netty.util.concurrent.SingleThreadEventExecutor$4.run(SingleThreadEventExecutor.java:986)\n",
+      "\tat io.netty.util.internal.ThreadExecutorMap$2.run(ThreadExecutorMap.java:74)\n",
+      "\tat io.netty.util.concurrent.FastThreadLocalRunnable.run(FastThreadLocalRunnable.java:30)\n",
+      "\tat java.base/java.lang.Thread.run(Thread.java:833)\n"
+     ]
     }
    ],
    "source": [
     "ori_transaction_1 = ori_transaction.groupby('merchant_abn', 'user_id').count()\n",
     "o_t = ori_transaction.groupby('merchant_abn').agg(F.count('user_id').alias('cnt'))\n",
     "ori_con = ori_transaction_1.join(o_t, ori_transaction_1.merchant_abn == o_t.merchant_abn).drop(o_t.merchant_abn)\n",
-    "ori_con_drop = ori_con.filter(F.col(\"count\") > 5)\n",
+    "ori_con_drop = ori_con.filter(F.col(\"count\") > 10)\n",
     "ori_con_fix = ori_con_drop.groupby('merchant_abn').agg(F.count('user_id').alias('fix_cus_num'), F.avg('cnt').alias('total_cus_num'))\n",
     "ori_con_fix_prob = ori_con_fix.withColumn(\"fix_cus_prob\", ori_con_fix.fix_cus_num /ori_con_fix.total_cus_num)\n",
     "ori_con_fix_prob"
