--- a/notebooks/census_age&income.ipynb
+++ b/notebooks/census_age&income.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/11 17:51:14 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 100.93.72.236 instead (on interface en0)\n",
-      "22/09/11 17:51:14 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "22/09/15 12:43:04 WARN Utils: Your hostname, hexiangyideMacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 10.13.176.27 instead (on interface en0)\n",
+      "22/09/15 12:43:04 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -25,7 +25,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/11 17:51:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/09/15 12:43:04 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/09/15 12:43:05 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "22/09/15 12:43:05 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     }
    ],
@@ -81,13 +83,6 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -200,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/09/11 17:51:26 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+      "22/09/15 12:43:15 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
      ]
     },
     {
@@ -284,73 +279,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th>SA2_CODE_2021</th><th>income_percentage</th><th>age_percentage</th></tr>\n",
-       "<tr><td>114011277</td><td>0.2275376580122625</td><td>0.5255932413964468</td></tr>\n",
-       "<tr><td>115041625</td><td>0.42880140494658275</td><td>0.5989420397019509</td></tr>\n",
-       "<tr><td>127031524</td><td>0.38038955556895615</td><td>0.6012589332197453</td></tr>\n",
-       "<tr><td>203021488</td><td>0.10574652322225138</td><td>0.6060103855927522</td></tr>\n",
-       "<tr><td>206041504</td><td>0.19762267601341055</td><td>0.8999407231772377</td></tr>\n",
-       "<tr><td>209031212</td><td>0.33100395993477755</td><td>0.5723826360243567</td></tr>\n",
-       "<tr><td>210011534</td><td>0.3086767546683838</td><td>0.5379154780070324</td></tr>\n",
-       "<tr><td>210031538</td><td>0.3715816182689597</td><td>0.6391309399326129</td></tr>\n",
-       "<tr><td>211011448</td><td>0.2927003249583895</td><td>0.6010173470718665</td></tr>\n",
-       "<tr><td>211051285</td><td>0.30385877206686457</td><td>0.5909896228802834</td></tr>\n",
-       "<tr><td>212041460</td><td>0.139683895771038</td><td>0.6168138430912153</td></tr>\n",
-       "<tr><td>304021088</td><td>0.4435540890879095</td><td>0.5376945298667413</td></tr>\n",
-       "<tr><td>310031289</td><td>0.3947215214438191</td><td>0.5790259934269495</td></tr>\n",
-       "<tr><td>402021030</td><td>0.06765868402697048</td><td>0.5625634869332349</td></tr>\n",
-       "<tr><td>402041046</td><td>0.12142619126957681</td><td>0.5723351618801764</td></tr>\n",
-       "<tr><td>505031100</td><td>0.33579679988519767</td><td>0.6094630116410064</td></tr>\n",
-       "<tr><td>601021010</td><td>0.11045501910385551</td><td>0.6218223364752927</td></tr>\n",
-       "<tr><td>604011083</td><td>0.169845832244578</td><td>0.5065337763012182</td></tr>\n",
-       "<tr><td>701021011</td><td>0.37581344902386116</td><td>0.579874213836478</td></tr>\n",
-       "<tr><td>801071090</td><td>0.43295382669196714</td><td>0.5639822447685479</td></tr>\n",
-       "</table>\n",
-       "only showing top 20 rows\n"
-      ],
-      "text/plain": [
-       "+-------------+-------------------+------------------+\n",
-       "|SA2_CODE_2021|  income_percentage|    age_percentage|\n",
-       "+-------------+-------------------+------------------+\n",
-       "|    114011277| 0.2275376580122625|0.5255932413964468|\n",
-       "|    115041625|0.42880140494658275|0.5989420397019509|\n",
-       "|    127031524|0.38038955556895615|0.6012589332197453|\n",
-       "|    203021488|0.10574652322225138|0.6060103855927522|\n",
-       "|    206041504|0.19762267601341055|0.8999407231772377|\n",
-       "|    209031212|0.33100395993477755|0.5723826360243567|\n",
-       "|    210011534| 0.3086767546683838|0.5379154780070324|\n",
-       "|    210031538| 0.3715816182689597|0.6391309399326129|\n",
-       "|    211011448| 0.2927003249583895|0.6010173470718665|\n",
-       "|    211051285|0.30385877206686457|0.5909896228802834|\n",
-       "|    212041460|  0.139683895771038|0.6168138430912153|\n",
-       "|    304021088| 0.4435540890879095|0.5376945298667413|\n",
-       "|    310031289| 0.3947215214438191|0.5790259934269495|\n",
-       "|    402021030|0.06765868402697048|0.5625634869332349|\n",
-       "|    402041046|0.12142619126957681|0.5723351618801764|\n",
-       "|    505031100|0.33579679988519767|0.6094630116410064|\n",
-       "|    601021010|0.11045501910385551|0.6218223364752927|\n",
-       "|    604011083|  0.169845832244578|0.5065337763012182|\n",
-       "|    701021011|0.37581344902386116| 0.579874213836478|\n",
-       "|    801071090|0.43295382669196714|0.5639822447685479|\n",
-       "+-------------+-------------------+------------------+\n",
-       "only showing top 20 rows"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "census_data = income_Data_total.join(Age_Data_rate, income_Data_total.SA2_CODE_2021 == Age_Data_rate.SA2_CODE_2021).drop(Age_Data_rate.SA2_CODE_2021)\n",
-    "census_data.limit(3)\n"
+    "census_data.write.parquet('../data/curated/final_census.parquet')\n"
    ]
   }
  ],
